Add logic to acknowledge runner is active

--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -5,6 +5,7 @@ ENV GIT_PAT ""
 ENV GIT_OWNER ""
 ENV GIT_REPO ""
 ENV LABELS ""
+ENV PING ""
 ENV RUNNER_WORKDIR "_work"
 ENV ASDF_DATA_DIR=/opt/asdf
 
