--- a/.github/workflows/build-container.yaml
+++ b/.github/workflows/build-container.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build and Push Linter Runner container
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       -
         name: Checkout
