--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -37,7 +37,7 @@ RUN sudo mkdir -p $ASDF_DATA_DIR \
     && echo ". ${ASDF_DATA_DIR}/asdf.sh" | tee -a /home/github/.bashrc \
     && . ${ASDF_DATA_DIR}/asdf.sh \
     && asdf update \
-    && while IFS= read -r line; do asdf plugin add $(echo $line | awk '{print $1}'); done < .tool-versions \
+    && echo "$(while IFS= read -r line; do asdf plugin add $(echo $line | awk '{print $1}'); done < .tool-versions)" \
     && asdf install \
     && sudo wget https://raw.githubusercontent.com/fsaintjacques/semver-tool/master/src/semver -O /usr/local/bin/semver \
     && sudo chown -R github:runners /usr/local/bin \
